# OpenVR-SpaceCalibrator

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  Protocol.h  README.md  build-and-install.sh  cmake_install.cmake  compile_commands.json  install.sh  openvrspacecalibrator.desktop  openvrspacecalibrator.desktop.in  uninstall.sh
OpenVR-SpaceCalibrator/: CMakeLists.txt  Calibration.cpp  Calibration.h  CalibrationCalc.cpp  Configuration.cpp  Makefile  OpenVR-SpaceCalibrator.cpp  UserInterface.cpp  cmake_install.cmake
OpenVR-SpaceCalibratorDriver/: CMakeLists.txt  Makefile  ServerTrackedDeviceProvider.cpp  ServerTrackedDeviceProvider.h  cmake_install.cmake
